--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -40,7 +40,7 @@
   line-height: 1.6;
 }
 
-.col h5 {
+.colTitle {
   font-size: 11px;
   letter-spacing: 0.18em;
   text-transform: uppercase;
